e-koolikott/DOP#10 Fix overlapping metafields detail view

--- a/app/styles/card.scss
+++ b/app/styles/card.scss
@@ -72,6 +72,7 @@ md-card {
     &.meta {
       line-height: 1.2;
       color: #333;
+      padding-right: 10px;
       md-icon.material-icons {
         font-size: inherit;
         vertical-align: baseline;
